# OpenGL-Power-FLow

./: CMakeLists.txt  README.md  main
include/: Graph.hpp  InputHandler.hpp  Parser.hpp  bus.hpp  camera.h  jacobian_gen.hpp  line.hpp  mesh.h  model.hpp  render.hpp  shader.h  solver.hpp  texture.h  transform.h  types.hpp
shaders/: basicShader.fs  basicShader.vs  basicShaderColor.fs
src/: Graph.cpp  InputHandler.cpp  Parser.cpp  bus.cpp  jacobian_gen.cpp  line.cpp  main.cpp  mesh.cpp  model.cpp  render.cpp  shader.cpp  solver.cpp  texture.cpp
